fixing scroll issue on mobile

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -401,5 +401,6 @@ h2{
     .membershipFaq {
         overflow:scroll;
         width:100%;
+        -webkit-overflow-scrolling: touch;
     }
 }
